--- a/admin.html
+++ b/admin.html
@@ -84,21 +84,16 @@
                 <div class="line"></div>
 
                 <div class="analytics">
-                    <div class="analysis-progrebar">
-                        <div class="analysis-progrebar-content-1">
-                            <h5>Users</h5>
-                            <div class="progress progress-mini ug-2">
-                            <h2 class="storage-right"><span class="counter">1000</span></h2>
-                            
-                            </div>
-                        </div>
-                        <!--<div class="analysis-progrebar-content-2">
-                            <h5>Courses</h5>
-                            <div class="progress progress-mini ug-2">
-                            <h2 class="storage-right"><span class="counter">75</span></h2>
-                            
-                            </div>
-                        </div>-->
+                    <div class="content-analysis-1">
+                        <h2 class="storage-right"><span class="counter">300</span></h2>
+                        <div class="progress-bar"> </div>
+                        <h3>Users</h3>
+                    </div>
+
+                     <div class="content-analysis-2">
+                        <h2 class="storage-right"><span class="counter-2">100</span></h2>
+                        <div class="progress-bar-2"> </div>
+                        <h3>Courses</h3>
                     </div>
                 </div>
         </div>  
