--- a/updateroles.html
+++ b/updateroles.html
@@ -26,7 +26,7 @@
                 <ul class="list-unstyled components">
                     
                     <li class="active">
-                        <a href="#homeSubmenu" >Dashboard</a>
+                        <a href="admin.html" >Dashboard</a>
                     </li>
                     <li>
                         <a href="#">Home</a>
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="updateroles.html">Update roles</a>
+                        <a href="#">Update roles</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
@@ -83,18 +83,8 @@
                     
                 <div class="line"></div>
 
-                <div class="analytics">
-                    <div class="content-analysis-1">
-                        <h2 class="storage-right"><span class="counter">300</span></h2>
-                        <div class="progress-bar"> </div>
-                        <h3>Users</h3>
-                    </div>
-
-                     <div class="content-analysis-2">
-                        <h2 class="storage-right"><span class="counter-2">100</span></h2>
-                        <div class="progress-bar-2"> </div>
-                        <h3>Courses</h3>
-                    </div>
+                <div class = "roles">
+                    <img src="assets/roles.png">
                 </div>
         </div>  
     </body>
